[project]
name = "helm-unittest-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.25.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
explicit_package_bases = true
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
show_error_codes = true
